--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,4 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: #252525;
+    color           : rgba(255, 255, 255, .6);
+  }
 }
